@@ -1,3 +1,11 @@
+2014-08-03  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Don't mishandle year-9999 dates (Bug#18176).
+	* parse-time.el (parse-time-rules):
+	Allow years up to most-positive-fixnum.
+	* time-date.el (date-to-time):
+	Pass "Specified time is not representable" errors through.
+
 2014-07-31  Tassilo Horn  <tsdh@gnu.org>
 
 	* gnus-msg.el (gnus-inews-insert-gcc): Allow `gcc-self' to be a list of
